Rodando versão com Flask

--- a/backend/app.yaml
+++ b/backend/app.yaml
@@ -1,17 +1,13 @@
 application: minipcs-777
-version: 1
+version: 2
 runtime: python27
 api_version: 1
 threadsafe: yes
 
 handlers:
 - url: /favicon\.ico
-  static_files: favicon.ico
-  upload: favicon\.ico
+  static_files: static/favicon.ico
+  upload: static/favicon\.ico
 
 - url: .*
-  script: main.app
-
-libraries:
-- name: webapp2
-  version: "2.5.2"
+  script: core.main.app
