--- a/backend/app.yaml
+++ b/backend/app.yaml
@@ -6,8 +6,8 @@ threadsafe: yes
 
 handlers:
 - url: /favicon\.ico
-  static_files: static/favicon.ico
-  upload: static/favicon\.ico
+  static_files: core/static/favicon.ico
+  upload: core/static/favicon\.ico
 
 - url: .*
   script: core.main.app
